--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "symfony/framework-bundle": "2.1.*",
-        "chrisboulton/php-resque": "dev-master"
+        "chrisboulton/php-resque": "1.2.*"
     },
     "autoload": {
         "psr-0": { "BCC\\ResqueBundle": "" }
