--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     ],
     "require": {
-        "symfony/framework-bundle": "<=2.2-dev",
+        "symfony/framework-bundle": "<=2.2.x-dev",
         "chrisboulton/php-resque": "1.2.*"
     },
     "autoload": {
