--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,13 @@
         {
             "name": "Michel Salib",
             "email": "michelsalib@hotmail.com",
-            "homepage": "michelsalib.com"
+            "homepage": "http://michelsalib.com"
         }
     ],
     "require": {
         "symfony/framework-bundle": "<=2.2.x-dev",
-        "chrisboulton/php-resque": "1.2.*"
+        "chrisboulton/php-resque": "1.2.*",
+        "chrisboulton/php-resque-scheduler": "dev-master"
     },
     "autoload": {
         "psr-0": { "BCC\\ResqueBundle": "" }
