--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "symfony/framework-bundle": "<=2.2.x-dev",
         "chrisboulton/php-resque": "1.2.*",
-        "chrisboulton/php-resque-scheduler": "dev-master"
+        "chrisboulton/php-resque-scheduler": "*"
     },
     "autoload": {
         "psr-0": { "BCC\\ResqueBundle": "" }
