--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "symfony/framework-bundle": "<=2.2.x-dev",
-        "chrisboulton/php-resque": "1.2.*",
+        "chrisboulton/php-resque": "*",
         "chrisboulton/php-resque-scheduler": "*"
     },
     "autoload": {
