--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,9 @@
     "autoload": {
         "psr-0": { "BCC\\ResqueBundle": "" }
     },
-    "target-dir": "BCC/ResqueBundle"
+    "target-dir": "BCC/ResqueBundle",
+    "repositories": [
+        { "type": "git", "url": "https://github.com/chrisboulton/php-resque-scheduler" }
+    ]
+
 }
