remove repositories in project composer.json (wont work)

--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,5 @@
     "autoload": {
         "psr-0": { "BCC\\ResqueBundle": "" }
     },
-    "target-dir": "BCC/ResqueBundle",
+    "target-dir": "BCC/ResqueBundle"
 }
