--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         {
             "name": "Michel Salib",
             "email": "michelsalib@hotmail.com",
-            "homepage": "michelsalib.com"
+            "homepage": "http://michelsalib.com"
         }
     ],
     "require": {
