--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "symfony/framework-bundle": ">=2.0,<3.0",
         "chrisboulton/php-resque": "dev-master",
-        "chrisboulton/php-resque-scheduler": "1.1"
+        "chrisboulton/php-resque-scheduler": "dev-master"
     },
     "autoload": {
         "psr-0": { "BCC\\ResqueBundle": "" }
